[package]
name = "aoc23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.1.2"
aoc-parse = "0.2.17"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.12.0"
maplit = "1.0.2"
num = "0.4.1"
